# litterbox

./: .gitignore  Anchor.toml  Cargo.toml  GITHUB_SETUP.md  LICENSE  README.md  SECURITY_AUDIT.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MANUAL_TESTING_GUIDE.md  STATUS.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  TEST_RESULTS_10_10.md
frontend/: INTEGRATION_GUIDE.md  README.md
programs/litterbox/: Cargo.toml
programs/litterbox/src/: error.rs  lib.rs
programs/litterbox/src/instructions/: buyback.rs  claim.rs  deposit.rs  initialize.rs  launch.rs  mod.rs
programs/litterbox/src/state/: mod.rs
scripts/: create-cycle1.js  debug-state.js  init-simple.js  initialize.ts  manual-test-admin.ts  run-full-test.ts  setup-test-token.ts  test-deposit.js  test-full-flow.js
tests/: advanced-features-test.ts  full-flow-test.ts  litterbox.ts
